<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">美图壁纸</string>
    <string name="action_bar">美图壁纸</string>

    <!-- global reload -->
    <string name="global_empty_reload">点击重新加载</string>
    <string name="global_empty_no_data">暂无数据</string>
    <string name="global_no_data">没有更多数据,请稍等</string>
    <string name="no_network_text">哎呀!</string>
    <string name="no_network_text_mark">网络出问题啦!</string>
    <string name="reload">重新加载</string>
    <string name="loading_text">加载中...</string>
    <!-- 首页 -->
    <string name="recommend">精选推荐</string>
    <!-- 图集 -->
    <string name="download_failed">图片加载失败，请检查网络状况后重试</string>
    <!-- setting -->
    <string name="setting">设置</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于</string>
      <string name="set_wallerpager_sucess">设置壁纸成功</string>
    <string name="has_new_version">已检测到最新版本</string>
    <string name="feedback">意见反馈</string>
    <string name="format_version">V  %1$s</string>
    <string name="copyright">美图多多版权所有 Copyright %1$d</string>

</resources>