<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/app_name"
        android:textColor="@color/first_title_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/format_version"
        android:textColor="@color/fivth_title_color"
        android:textSize="14sp" />
    
     <TextView
         android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/copyright"
        android:textColor="@color/fivth_title_color"
        android:textSize="13sp" />
    

</RelativeLayout>