<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="1dip"
        android:background="@color/setting_line_bg" />

     <RelativeLayout
        android:id="@+id/rl_feedback"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/home_item_selector"
        android:gravity="center_vertical"
        android:paddingEnd="15dp"
        android:paddingLeft="16dp"
        android:paddingRight="15dp"
        android:paddingStart="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/home_feedback_icon"
            android:drawablePadding="11dp"
            android:drawableStart="@drawable/home_feedback_icon"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/feedback"
            android:textColor="@color/first_title_color"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/setting_line_bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:background="@color/gap_line_bg" />

    <RelativeLayout
        android:id="@+id/rl_check_update"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/home_item_selector"
        android:gravity="center_vertical"
        android:padding="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/check_update"
            android:textColor="@color/first_title_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_new_version_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/has_new_version"
            android:textColor="@color/fivth_title_color"
            android:textSize="12sp"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gap_line_bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:background="@color/gap_line_bg" />

    <RelativeLayout
        android:id="@+id/rl_about"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/home_item_selector"
        android:gravity="center_vertical"
        android:padding="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/about"
            android:textColor="@color/first_title_color"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gap_line_bg" />

</LinearLayout>